--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body{
-    font-family: 'Sweet Buttermilk Free', sans-serif Im !important;
-                                                
+html,
+body {
+  font-family: 'Zilla Slab', 'Sweet Buttermilk Free', sans-serif Im !important;
 }
